--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NODE_ENV = developement
 PORT = 8000
+MONGO_URI = mongodb+srv://samar1234:samar1234@clustersamar.blscthy.mongodb.net/mernProject?retryWrites=true&w=majority
